(update): catagory name

--- a/fivem/txadmin-setup.mdx
+++ b/fivem/txadmin-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "txAdmin Setup"
+title: "FiveM txAdmin"
 description: "How to setup txAdmin on CentrixNodes Game Panel"
 icon: "house"
 ---
