--- a/index.mdx
+++ b/index.mdx
@@ -24,6 +24,12 @@ Find tutorials and guides for your Game servers and Virtual Private Servers.
   </Card>
 </Columns>
 
+## Want to contribute?
+
+<Info>
+  We welcome contributions from the community! If you have a tutorial or guide you'd like to share, please make a Pull request at our <a href="https://github.com/CentrixNodes-LLC/centrixnodes-docs">GitHub</a>.
+</Info>
+
 ## Need Help?
 
 <Card
