--- a/game/2fa.mdx
+++ b/game/2fa.mdx
@@ -1,7 +1,7 @@
 ---
 title: "How to set up 2FA"
 description: "Learn how to set up two-factor authentication (2FA) on our game panel."
-icon: "server"
+icon: "lock"
 ---
 
 ### COMING SOON
